syntax = "proto3";

package pb;

message Syn {
    bytes Address = 1;
    int32 NetworkID = 2;
    bool Light = 3;
}

message SynAck {
    Syn Syn = 1;
    Ack Ack = 2;
}

message Ack {
    bytes Address = 1;
}
